--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@huggingface/inference": "^4.13.11",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "jsonrepair": "^3.13.2",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2"
